--- a/index.html
+++ b/index.html
@@ -181,242 +181,246 @@
             </div>
     </main>
 
-    <footer>
+    <footer class="footer">
         <div class="container">
-            <div>
-                <form action="#">
-                    <p>Получайте выгодные предложения, просто оставьте свою почту!</p>
-                    <div>
-                        <input type="text" required placeholder="Ваш email">
-                        <input type="submit" value="">
+
+            <div class="footer__columns">
+                <div class="footer__columns-items">
+                    <form action="#" class="footer__columns-items-form">
+                        <p>Получайте выгодные предложения, просто оставьте свою почту!</p>
+
+                        <div class="footer__columns-items-form-block">
+                            <input type="text" required placeholder="Ваш email" class="footer__columns-items-form-block-input">
+                            <input type="submit" value="" class="footer__columns-items-form-block-btn">
+                        </div>
+                    </form>
+
+                    <p>Мы в соцсетях</p>
+
+                    <div class="footer__columns-items-social">
+                        <a href="#" class="footer__columns-items-social-btn">VK</a>
+                        <a href="#" class="footer__columns-items-social-btn">FB</a>
+                        <a href="#" class="footer__columns-items-social-btn">OK</a>
                     </div>
-                </form>
 
-                <p>Мы в соцсетях</p>
+                    <p class="footer__columns-items-questions">У вас остались вопросы? <br> Позвоните нам!</p>
 
-                <a href="#">VK</a>
-                <a href="#">FB</a>
-                <a href="#">OK</a>
+                    <a href="tel:+78123222266" class="footer__columns-items-tel">8 (812) 322-22-66</a> <br>
+                    <a href="tel:+78001002112" class="footer__columns-items-tel">8 (800) 100-21-12</a>
+                </div>
 
-                <p>У вас остались вопросы? Позвоните нам!</p>
+                <div class="footer__columns-items ">
+                    <h4 class="footer__columns-title ">КАТАЛОГ</h4>
 
-                <a href="tel:+78123222266">8 (812) 322-22-66</a>
-                <a href="tel:+78001002112">8 (800) 100-21-12</a>
-            </div>
-
-            <div>
-                <h4>КАТАЛОГ</h4>
-
-                <ul>
-                    <li>
-                        <a href="#">Сухие смеси, грунты</a>
-                    </li>
-                    <li>
-                        <a href="#">Гидро- и тепло- изоляция</a>
-                    </li>
-                    <li>
-                        <a href="#">Гипсокартон</a>
-                    </li>
-                    <li>
-                        <a href="#">Двери, окна, фурнитура</a>
-                    </li>
-                    <li>
-                        <a href="#">Полиматериалы</a>
-                    </li>
-                    <li>
-                        <a href="#">Кровля, водосток</a>
-                    </li>
-                    <li>
-                        <a href="#">Лаки, краски, герметики</a>
-                    </li>
-                    <li>
-                        <a href="#">Отделочные материалы</a>
-                    </li>
-                    <li>
-                        <a href="#">Общестроительные</a>
-                    </li>
-                    <li>
-                        <a href="#">Сантехника, вентиляция</a>
-                    </li>
-                    <li>
-                        <a href="#">Электротехника</a>
-                    </li>
-                    <li>
-                        <a href="#">Интсрументы, оснастка</a>
-                    </li>
-                    <li>
-                        <a href="#">Метизы, крепеж</a>
-                    </li>
-                    <li>
-                        <a href="#">Спецодежда и хоз.товары</a>
-                    </li>
-                </ul>
-            </div>
-
-            <div>
-                <h4>О КОМПАНИИ</h4>
-
-                <ul>
-                    <li>
-                        <a href="#">О группе компаний</a>
-                    </li>
-                    <li>
-                        <a href="#">Вакансии</a>
-                    </li>
-                    <li>
-                        <a href="#">Реквизиты</a>
-                    </li>
-                    <li>
-                        <a href="#">Сотрудничество</a>
-                    </li>
-                </ul>
-
-                <div>
-                    <h4>УСЛУГИ</h4>
-
-                    <ul>
+                    <ul class="footer__columns-item ">
                         <li>
-                            <a href="#">Доставка товара</a>
+                            <a href="# " class="footer__columns-item-link ">Сухие смеси, грунты</a>
                         </li>
                         <li>
-                            <a href="#">Разгрузка</a>
+                            <a href="# " class="footer__columns-item-link ">Гидро- и тепло- изоляция</a>
                         </li>
                         <li>
-                            <a href="#">Подъем на этаж</a>
+                            <a href="# " class="footer__columns-item-link ">Гипсокартон</a>
                         </li>
                         <li>
-                            <a href="#">Распил/ резка</a>
+                            <a href="# " class="footer__columns-item-link ">Двери, окна, фурнитура</a>
                         </li>
                         <li>
-                            <a href="#">Колеровка</a>
+                            <a href="# " class="footer__columns-item-link ">Полиматериалы</a>
+                        </li>
+                        <li>
+                            <a href="# " class="footer__columns-item-link ">Кровля, водосток</a>
+                        </li>
+                        <li>
+                            <a href="# " class="footer__columns-item-link ">Лаки, краски, герметики</a>
+                        </li>
+                        <li>
+                            <a href="# " class="footer__columns-item-link ">Отделочные материалы</a>
+                        </li>
+                        <li>
+                            <a href="# " class="footer__columns-item-link ">Общестроительные</a>
+                        </li>
+                        <li>
+                            <a href="# " class="footer__columns-item-link ">Сантехника, вентиляция</a>
+                        </li>
+                        <li>
+                            <a href="# " class="footer__columns-item-link ">Электротехника</a>
+                        </li>
+                        <li>
+                            <a href="# " class="footer__columns-item-link ">Интсрументы, оснастка</a>
+                        </li>
+                        <li>
+                            <a href="# " class="footer__columns-item-link ">Метизы, крепеж</a>
+                        </li>
+                        <li>
+                            <a href="# " class="footer__columns-item-link ">Спецодежда и хоз.товары</a>
                         </li>
                     </ul>
                 </div>
 
-                <div>
-                    <h4>ИНТЕРЕСНОЕ</h4>
+                <div class="footer__columns-items ">
+                    <h4 class="footer__columns-title ">О КОМПАНИИ</h4>
 
-                    <ul>
+                    <ul class="footer__columns-item ">
                         <li>
-                            <a href="#">Статьи</a>
+                            <a href="# " class="footer__columns-item-link ">О группе компаний</a>
                         </li>
                         <li>
-                            <a href="#">Обзоры</a>
+                            <a href="# " class="footer__columns-item-link ">Вакансии</a>
                         </li>
                         <li>
-                            <a href="#">Советы</a>
+                            <a href="# " class="footer__columns-item-link ">Реквизиты</a>
+                        </li>
+                        <li>
+                            <a href="# " class="footer__columns-item-link ">Сотрудничество</a>
                         </li>
                     </ul>
-                </div>
-            </div>
 
-            <div>
-                <h4>АККАУНТ</h4>
-
-                <ul>
-                    <li>
-                        <a href="#">Профиль</a>
-                    </li>
-                    <li>
-                        <a href="#">Заказы</a>
-                    </li>
-                    <li>
-                        <a href="#">История заказов</a>
-                    </li>
-                    <li>
-                        <a href="#">Черновики заказа</a>
-                    </li>
-                    <li>
-                        <a href="#">Баланс САТов</a>
-                    </li>
-                </ul>
-
-                <div>
-                    <h4>МАГАЗИНЫ</h4>
-
-                    <ul>
-                        <li>
-                            <a href="#">Литовская ул., 15</a>
-                        </li>
-                        <li>
-                            <a href="#">Индустриальный пр., 71</a>
-                        </li>
-                        <li>
-                            <a href="#">Лахтинский пр., 139</a>
-                        </li>
-                        <li>
-                            <a href="#">Касимовская ул., 3</a>
-                        </li>
-                        <li>
-                            <a href="#">рулева ул., 12</a>
-                        </li>
-                        <li>
-                            <a href="#">Краснопутиловская ул., 31</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-
-            <div>
-                <h4>ПОКУПАТЕЛЯМ</h4>
-
-                <ul>
-                    <li>
-                        <a href="#">Акции</a>
-                    </li>
-                    <li>
-                        <a href="#">Как заказать</a>
-                    </li>
-                    <li>
-                        <a href="#">Подарочные карты</a>
-                    </li>
-                    <li>
-                        <a href="#">Обмен, возврат товара</a>
-                    </li>
-                    <li>
-                        <a href="#">Наши бренды</a>
-                    </li>
-                    <li>
-                        <a href="#">Наши партнеры</a>
-                    </li>
-                    <li>
-                        <a href="#">Оплата</a>
-                    </li>
-                    <li>
-                        <a href="#">Обратная связь</a>
-                    </li>
-                </ul>
-
-                <div>
                     <div>
-                        <img src="img/maestro.png" alt="">
-                        <img src="img/mastercard.png" alt="">
+                        <h4 class="footer__columns-title ">УСЛУГИ</h4>
+
+                        <ul class="footer__columns-item ">
+                            <li>
+                                <a href="# " class="footer__columns-item-link ">Доставка товара</a>
+                            </li>
+                            <li>
+                                <a href="# " class="footer__columns-item-link ">Разгрузка</a>
+                            </li>
+                            <li>
+                                <a href="# " class="footer__columns-item-link ">Подъем на этаж</a>
+                            </li>
+                            <li>
+                                <a href="# " class="footer__columns-item-link ">Распил/ резка</a>
+                            </li>
+                            <li>
+                                <a href="# " class="footer__columns-item-link ">Колеровка</a>
+                            </li>
+                        </ul>
                     </div>
 
                     <div>
-                        <img src="img/visa.png" alt="">
-                        <img src="img/diners-club.png" alt="">
+                        <h4 class="footer__columns-title ">ИНТЕРЕСНОЕ</h4>
+
+                        <ul class="footer__columns-item ">
+                            <li>
+                                <a href="# " class="footer__columns-item-link ">Статьи</a>
+                            </li>
+                            <li>
+                                <a href="# " class="footer__columns-item-link ">Обзоры</a>
+                            </li>
+                            <li>
+                                <a href="# " class="footer__columns-item-link ">Советы</a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
 
-                <a href="#">КАРТА САЙТА</a>
-            </div>
+                <div class="footer__columns-items ">
+                    <h4 class="footer__columns-title ">АККАУНТ</h4>
 
-            <div>
-                <img src="img/logo-footer.png" alt="Логотип Сатурн">
+                    <ul class="footer__columns-item ">
+                        <li>
+                            <a href="# " class="footer__columns-item-link ">Профиль</a>
+                        </li>
+                        <li>
+                            <a href="# " class="footer__columns-item-link ">Заказы</a>
+                        </li>
+                        <li>
+                            <a href="# " class="footer__columns-item-link ">История заказов</a>
+                        </li>
+                        <li>
+                            <a href="# " class="footer__columns-item-link ">Черновики заказа</a>
+                        </li>
+                        <li>
+                            <a href="# " class="footer__columns-item-link ">Баланс САТов</a>
+                        </li>
+                    </ul>
 
-                <div>
-                    <p>Группа компаний "Сатурн" - крупнейший федеральный оператор на рынке строительных и отделочных материалов, включает в себя 49 торговых площадок в 23 городах России. За 20 лет успешной работы компания стала лидером в своем сегменте.
-                        В настоящик момент компания поставляет 15 000 наименований товаров на строительные объекты по всей стране.</p>
+                    <div>
+                        <h4 class="footer__columns-title ">МАГАЗИНЫ</h4>
 
-                    <p>ООО “САТУРН”, 2016</p>
+                        <ul class="footer__columns-item ">
+                            <li>
+                                <a href="# " class="footer__columns-item-link ">Литовская ул., 15</a>
+                            </li>
+                            <li>
+                                <a href="# " class="footer__columns-item-link ">Индустриальный пр., 71</a>
+                            </li>
+                            <li>
+                                <a href="# " class="footer__columns-item-link ">Лахтинский пр., 139</a>
+                            </li>
+                            <li>
+                                <a href="# " class="footer__columns-item-link ">Касимовская ул., 3</a>
+                            </li>
+                            <li>
+                                <a href="# " class="footer__columns-item-link ">рулева ул., 12</a>
+                            </li>
+                            <li>
+                                <a href="# " class="footer__columns-item-link ">Краснопутиловская ул., 31</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="footer__columns-items">
+                    <h4 class="footer__columns-title ">ПОКУПАТЕЛЯМ</h4>
+
+                    <ul class="footer__columns-item ">
+                        <li>
+                            <a href="# " class="footer__columns-item-link ">Акции</a>
+                        </li>
+                        <li>
+                            <a href="# " class="footer__columns-item-link ">Как заказать</a>
+                        </li>
+                        <li>
+                            <a href="# " class="footer__columns-item-link ">Подарочные карты</a>
+                        </li>
+                        <li>
+                            <a href="# " class="footer__columns-item-link ">Обмен, возврат товара</a>
+                        </li>
+                        <li>
+                            <a href="# " class="footer__columns-item-link ">Наши бренды</a>
+                        </li>
+                        <li>
+                            <a href="# " class="footer__columns-item-link ">Наши партнеры</a>
+                        </li>
+                        <li>
+                            <a href="# " class="footer__columns-item-link ">Оплата</a>
+                        </li>
+                        <li>
+                            <a href="# " class="footer__columns-item-link ">Обратная связь</a>
+                        </li>
+                    </ul>
+
+                    <div class="footer__columns-items-cards">
+                        <div class="footer__columns-items-cards-items">
+                            <img src="img/maestro.png " alt=" " class="footer__columns-items-cards-items-item">
+                            <img src="img/mastercard.png " alt=" " class="footer__columns-items-cards-items-item">
+                        </div>
+
+                        <div class="footer__columns-items-cards-items">
+                            <img src="img/visa.png " alt=" " class="footer__columns-items-cards-items-item">
+                            <img src="img/diners-club.png " alt=" " class="footer__columns-items-cards-items-item">
+                        </div>
+                    </div>
+
+                    <a href="#" class="footer__columns-items-site-card">КАРТА САЙТА</a>
                 </div>
             </div>
 
-            <div>
-                <p>ПРАВИЛЬНЫЙ АССОРТИМЕНТ</p>
-                <p>ПРАВИЛЬНАЯ ЦЕНА</p>
-                <p>НАЛИЧИЕ НА СКЛАДЕ</p>
+            <div class="footer__info">
+                <img class="footer__info-image" src="img/logo-footer.png " alt="Логотип Сатурн ">
+
+                <p class="footer__info-text">Группа компаний "Сатурн " - крупнейший федеральный оператор на рынке строительных и отделочных материалов, включает в себя 49 торговых площадок в 23 городах России. За 20 лет успешной работы компания стала лидером в своем сегменте. В настоящик
+                    момент компания поставляет 15 000 наименований товаров на строительные объекты по всей стране.</p>
+            </div>
+
+            <p class="footer__info-text-copyright">ООО “САТУРН”, 2016</p>
+
+            <div class="footer__bottom">
+                <p class="footer__bottom-item">ПРАВИЛЬНЫЙ АССОРТИМЕНТ</p>
+                <p class="footer__bottom-item">ПРАВИЛЬНАЯ ЦЕНА</p>
+                <p class="footer__bottom-item">НАЛИЧИЕ НА СКЛАДЕ</p>
             </div>
         </div>
     </footer>
