--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
                 <p class="header__user-name"><a href="#" class="header__user-name-link link">Артур Пирожков</a></p>
             </div>
 
+            <div class="header__top-mobile">
+                <a href="tel:+78123222266" class="header__top-mobile-link link">8 (812) 322-22-66</a>
+            </div>
+
             <div class="header__main">
                 <div class="header__main-logo">
                     <img src="img/logo.png" alt="Логотип Сатурн">
@@ -182,7 +186,7 @@
     </main>
 
     <footer class="footer">
-        <div class="container">
+        <div class="container container-footer">
 
             <div class="footer__columns">
                 <div class="footer__columns-items">
@@ -416,12 +420,12 @@
             </div>
 
             <p class="footer__info-text-copyright">ООО “САТУРН”, 2016</p>
+        </div>
 
-            <div class="footer__bottom">
-                <p class="footer__bottom-item">ПРАВИЛЬНЫЙ АССОРТИМЕНТ</p>
-                <p class="footer__bottom-item">ПРАВИЛЬНАЯ ЦЕНА</p>
-                <p class="footer__bottom-item">НАЛИЧИЕ НА СКЛАДЕ</p>
-            </div>
+        <div class="footer__bottom">
+            <p class="footer__bottom-item">ПРАВИЛЬНЫЙ АССОРТИМЕНТ</p>
+            <p class="footer__bottom-item">ПРАВИЛЬНАЯ ЦЕНА</p>
+            <p class="footer__bottom-item">НАЛИЧИЕ НА СКЛАДЕ</p>
         </div>
     </footer>
 
