added header-main adaptive

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             </div>
 
             <div class="header__main">
+
+                <div class="header__main-mobile-burger"></div>
+
                 <div class="header__main-logo">
                     <img src="img/logo.png" alt="Логотип Сатурн">
                 </div>
@@ -45,6 +48,10 @@
                     <div class="header__main-info-item">
                         <p class="header__main-info-item-text"><b class="red">(10)</b> товаров <br> на сумму <b class="red">5 364 р.</b></p>
                     </div>
+                </div>
+
+                <div class="header__main-mobile-cart">
+                    <img src="img/cart-2-mobile.png" alt="Корзина">
                 </div>
             </div>
         </div>
