added navigation adaptive

--- a/index.html
+++ b/index.html
@@ -64,8 +64,11 @@
 
                 <form action="" class="navigation__search">
                     <input class="navigation__search-input" type="search" required placeholder="Что вы ищете?">
+                    <input class="navigation__search-mobile-input" type="search" required placeholder="Поиск">
                     <input class="navigation__search-input-btn btn-link" type="submit" value="">
                 </form>
+
+                <button class="navigation__btn-mobile btn">КАТАЛОГ</button>
 
                 <ul class="navigation__menu">
                     <li class="navigation__menu-item"><a href="#" class="navigation__menu-item-link link">АКЦИИ и НОВОСТИ</a></li>
