added crimbs adaptive

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                     <li class="crumbs__items-item"><a href="#" class="crumbs__items-item-link link">Покупателям</a></li>
                     <li class="crumbs__items-item">&gt;</li>
                     <li class="crumbs__items-item"><a href="#" class="crumbs__items-item-link link crumbs__items-item-link-nounderline">Резка и распил</a></li>
+                    <li class="crumbs__items-item"><a href="#" class="crumbs__mobile-items-item-link link ">Доставка</a></li>
                 </ul>
             </section>
 
