--- a/index.html
+++ b/index.html
@@ -128,6 +128,14 @@
                     </div>
                 </section>
 
+                <section class="about-mobile">
+                    <h2 class="about-mobile-title">ДОСТАВКА</h2>
+                    <p class="about-mobile-text">Если ваш адрес входит в «Зону действия единой стоимости доставки» (ЗЕСД), отмеченную <a href="#" class="red link">на карте</a> зеленым цветом, в зависимости от суммы покупки мы доставим товар бесплатно или по фиксированной цене.
+                        <br><br> При сумме заказа от 20 000 руб. стандартная доставка в приделах ЗЕСД осуществляется БЕСПЛАТНО. <br> Если сумма Вашего заказа не превышает 20 000 руб., то стоимость стандартсной доставки с ЗЕСД - <a href="#" class="red link">фиксированна и зависит от типа транспортного средства</a><br><br>Если
+                        Ваш адрес не входит в ЗЕСД, то узнать стоимость вы можете в разделе <a href="#" class="red link">"Расчет стоимости доставки"</a>, а также по телефонам 8 (812) 322-22-66 или 8 (800) 100-21-12. <br> <br> В случае если размеры материалов
+                        превышают габаритные размеры заказываемого автомобиля - их необходимо предварительно <a href="#" class="red link"> распилить (разрезать).</a> </p>
+                </section>
+
                 <section class="price">
                     <div class="price__content">
 
