added price adaptive

--- a/index.html
+++ b/index.html
@@ -137,10 +137,14 @@
                 </section>
 
                 <section class="price">
-                    <div class="price__content">
+                    <div class="price__image-mobile">
+                        <img src="img/car-mobile.png" alt="" class="price__image-mobile-img">
+                    </div>
 
-                        <p class="price__content-text">УЗНАЙТЕ СТОИМОСТЬ</p>
-                        <p class="price__content-text">СВОЕЙ ДОСТАВКИ СЕЙЧАС!</p>
+                    <div class="price__content">
+                        <p class="price__content-text">Узнайте стоимость</p>
+                        <p class="price__content-text">своей доставки сейчас!</p>
+                        <p class="price__content-text-mobile">своей доставки!</p>
 
 
                         <button class="price__content-btn btn">РАССЧИТАТЬ</button>
