added types adaptive

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     <div class="types__item">
                         <p class="types__item-caption">Точно ко времени</p>
 
-                        <div class="types__item-description">
+                        <div class="types__item-description types__item-description-totime">
                             <p>Заказ доставляется точно ко времени <b>в рамках интервала с 9:00 до 22:00.</b> <br> <b>Оформляется</b> не позднее чем <b>за 5 часов</b> до желаемого времени доставки.</p>
                             <p class="types__item-description-footnote">
                                 (Чтобы мы привезли заказ сегодня, он должен быть оформлен и подтвержден оператором с 8:00 до 17:00. Если заказ будет оформлен и подтвержден сегодня после 17:00, он будет доставлен не ранее 13:00 завтрашнего дня).
