added footer adaptive

--- a/index.html
+++ b/index.html
@@ -452,6 +452,25 @@
         </div>
     </footer>
 
+    <section class="footer__mobile">
+        <div class="footer__mobile-payment">
+            <a href="#" class="footer__mobile-link link">Оплата заказа картой</a>
+            <a href="#"><img src="img/payment.png" alt=""></a>
+        </div>
+
+        <div class="footer__mobile-info">
+            <div class="footer__mobile-info-contacts">
+                <a href="tel:+78123222266" class="footer__mobile-link link">8 (812) 322-22-66</a>
+                <a href="#" class="footer__mobile-link link link-bottom">Санкт-Петербург</a>
+            </div>
+
+            <div class="footer__mobile-info-other">
+                <a href="#" class="footer__mobile-link link">Обратная связь</a>
+                <a href="#" class="footer__mobile-link link link-bottom">Полная версия сайта</a>
+            </div>
+        </div>
+    </section>
+
 
 </body>
 
