added test scroll

--- a/index.html
+++ b/index.html
@@ -205,6 +205,16 @@
                         </div>
                     </div>
                 </section>
+
+                <section>
+                    <h2>Другие услуги</h2>
+
+                    <div class="scroll">
+                        <div class="scroll-card"><img src="img/car-mobile.png" alt=""></div>
+                        <div class="scroll-card"><img src="img/loader-mobile.png" alt=""></div>
+                        <div class="scroll-card"><img src="img/car-mobile.png" alt=""></div>
+                    </div>
+                </section>
             </div>
     </main>
 
