--- a/index.html
+++ b/index.html
@@ -206,13 +206,30 @@
                     </div>
                 </section>
 
-                <section>
-                    <h2>Другие услуги</h2>
+                <section class="slider-mobile">
+                    <h2 class="slider-mobile__title">Другие услуги</h2>
 
-                    <div class="scroll">
-                        <div class="scroll-card"><img src="img/car-mobile.png" alt=""></div>
-                        <div class="scroll-card"><img src="img/loader-mobile.png" alt=""></div>
-                        <div class="scroll-card"><img src="img/car-mobile.png" alt=""></div>
+                    <div class="slider-mobile__scroll">
+                        <a href="#" class="slider-mobile__scroll-link btn-link">
+                            <div class="slider-mobile__scroll-card">
+                                <img src="img/slider-car.png" alt="">
+                                <p class="slider-mobile__scroll-card-caption">Доставка</p>
+                            </div>
+                        </a>
+
+                        <a href="#" class="slider-mobile__scroll-link btn-link">
+                            <div class="slider-mobile__scroll-card ">
+                                <img src="img/slider-loader.png " alt=" ">
+                                <p class="slider-mobile__scroll-card-caption ">Разгрузка и подем</p>
+                            </div>
+                        </a>
+
+                        <a href="# " class="slider-mobile__scroll-link btn-link">
+                            <div class="slider-mobile__scroll-card">
+                                <img src="img/decstop.png" alt="">
+                                <p class="slider-mobile__scroll-card-caption">Оплата</p>
+                            </div>
+                        </a>
                     </div>
                 </section>
             </div>
