fix style ans html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-
     <header class="header">
         <div class="container">
             <div class="header__user">
@@ -27,7 +26,6 @@
             </div>
 
             <div class="header__main">
-
                 <div class="header__main-mobile-burger"></div>
 
                 <div class="header__main-logo">
@@ -123,14 +121,14 @@
 
                         <div class="advantages__items-column">
                             <p class="advantages__items-column-item advantages__items-column-item-okey">Бережная транспортировка на <br> оборудованных автомобилях</p>
-                            <p class="advantages__items-column-item advantages__items-column-item-jps">Доставка по Петербургу, <br> области и пригородам</p>
+                            <p class="advantages__items-column-item advantages__items-column-item-gps">Доставка по Петербургу, <br> области и пригородам</p>
                         </div>
                     </div>
                 </section>
 
                 <section class="about-mobile">
-                    <h2 class="about-mobile-title">ДОСТАВКА</h2>
-                    <p class="about-mobile-text">Если ваш адрес входит в «Зону действия единой стоимости доставки» (ЗЕСД), отмеченную <a href="#" class="red link">на карте</a> зеленым цветом, в зависимости от суммы покупки мы доставим товар бесплатно или по фиксированной цене.
+                    <h2>ДОСТАВКА</h2>
+                    <p>Если ваш адрес входит в «Зону действия единой стоимости доставки» (ЗЕСД), отмеченную <a href="#" class="red link">на карте</a> зеленым цветом, в зависимости от суммы покупки мы доставим товар бесплатно или по фиксированной цене.
                         <br><br> При сумме заказа от 20 000 руб. стандартная доставка в приделах ЗЕСД осуществляется БЕСПЛАТНО. <br> Если сумма Вашего заказа не превышает 20 000 руб., то стоимость стандартсной доставки с ЗЕСД - <a href="#" class="red link">фиксированна и зависит от типа транспортного средства</a><br><br>Если
                         Ваш адрес не входит в ЗЕСД, то узнать стоимость вы можете в разделе <a href="#" class="red link">"Расчет стоимости доставки"</a>, а также по телефонам 8 (812) 322-22-66 или 8 (800) 100-21-12. <br> <br> В случае если размеры материалов
                         превышают габаритные размеры заказываемого автомобиля - их необходимо предварительно <a href="#" class="red link"> распилить (разрезать).</a> </p>
@@ -145,7 +143,6 @@
                         <p class="price__content-text">Узнайте стоимость</p>
                         <p class="price__content-text">своей доставки сейчас!</p>
                         <p class="price__content-text-mobile">своей доставки!</p>
-
 
                         <button class="price__content-btn btn">РАССЧИТАТЬ</button>
                     </div>
@@ -177,6 +174,7 @@
 
                         <div class="types__item-description types__item-description-totime">
                             <p>Заказ доставляется точно ко времени <b>в рамках интервала с 9:00 до 22:00.</b> <br> <b>Оформляется</b> не позднее чем <b>за 5 часов</b> до желаемого времени доставки.</p>
+
                             <p class="types__item-description-footnote">
                                 (Чтобы мы привезли заказ сегодня, он должен быть оформлен и подтвержден оператором с 8:00 до 17:00. Если заказ будет оформлен и подтвержден сегодня после 17:00, он будет доставлен не ранее 13:00 завтрашнего дня).
                             </p>
@@ -193,7 +191,7 @@
                 <section class="unloading">
                     <h3 class="unloading__title">РАЗГРУЗКА И ПОДЪЕМ</h3>
 
-                    <p class="unloading___text">Мы заботимся о наших клиентах и всегда готовы предоставить полный комплекс услуг. <br> Помимо доставки мы можем осуществить <b>разгрузку, пронос и подъем</b> ваших товаров.</p>
+                    <p>Мы заботимся о наших клиентах и всегда готовы предоставить полный комплекс услуг. <br> Помимо доставки мы можем осуществить <b>разгрузку, пронос и подъем</b> ваших товаров.</p>
 
                     <div class="unloading__application">
                         <img src="img/loader.png" alt="Грузчик">
@@ -207,7 +205,7 @@
                 </section>
 
                 <section class="slider-mobile">
-                    <h2 class="slider-mobile__title">Другие услуги</h2>
+                    <h2>Другие услуги</h2>
 
                     <div class="slider-mobile__scroll">
                         <a href="#" class="slider-mobile__scroll-link btn-link">
@@ -226,7 +224,7 @@
 
                         <a href="# " class="slider-mobile__scroll-link btn-link">
                             <div class="slider-mobile__scroll-card">
-                                <img src="img/decstop.png" alt="">
+                                <img src="img/slider-decstop.png" alt="">
                                 <p class="slider-mobile__scroll-card-caption">Оплата</p>
                             </div>
                         </a>
@@ -239,7 +237,7 @@
         <div class="container container-footer">
 
             <div class="footer__columns">
-                <div class="footer__columns-items">
+                <div>
                     <form action="#" class="footer__columns-items-form">
                         <p>Получайте выгодные предложения, просто оставьте свою почту!</p>
 
@@ -263,10 +261,10 @@
                     <a href="tel:+78001002112" class="footer__columns-items-tel link">8 (800) 100-21-12</a>
                 </div>
 
-                <div class="footer__columns-items">
-                    <h4 class="footer__columns-title ">КАТАЛОГ</h4>
+                <div>
+                    <h4 class="footer__columns-title">КАТАЛОГ</h4>
 
-                    <ul class="footer__columns-item ">
+                    <ul class="footer__columns-item">
                         <li>
                             <a href="#" class="footer__columns-item-link link">Сухие смеси, грунты</a>
                         </li>
@@ -312,7 +310,7 @@
                     </ul>
                 </div>
 
-                <div class="footer__columns-items">
+                <div>
                     <h4 class="footer__columns-title">О КОМПАНИИ</h4>
 
                     <ul class="footer__columns-item">
@@ -369,7 +367,7 @@
                     </div>
                 </div>
 
-                <div class="footer__columns-items">
+                <div>
                     <h4 class="footer__columns-title">АККАУНТ</h4>
 
                     <ul class="footer__columns-item">
@@ -416,7 +414,7 @@
                     </div>
                 </div>
 
-                <div class="footer__columns-items">
+                <div>
                     <h4 class="footer__columns-title">ПОКУПАТЕЛЯМ</h4>
 
                     <ul class="footer__columns-item">
@@ -473,9 +471,11 @@
         </div>
 
         <div class="footer__bottom">
-            <p class="footer__bottom-item">ПРАВИЛЬНЫЙ АССОРТИМЕНТ</p>
-            <p class="footer__bottom-item">ПРАВИЛЬНАЯ ЦЕНА</p>
-            <p class="footer__bottom-item">НАЛИЧИЕ НА СКЛАДЕ</p>
+            <div class="container footer__bottom-block">
+                <p class="footer__bottom-block-item">ПРАВИЛЬНЫЙ АССОРТИМЕНТ</p>
+                <p class="footer__bottom-block-item">ПРАВИЛЬНАЯ ЦЕНА</p>
+                <p class="footer__bottom-block-item">НАЛИЧИЕ НА СКЛАДЕ</p>
+            </div>
         </div>
     </footer>
 
