--- a/index.html
+++ b/index.html
@@ -210,21 +210,21 @@
                     <div class="slider-mobile__scroll">
                         <a href="#" class="slider-mobile__scroll-link btn-link">
                             <div class="slider-mobile__scroll-card">
-                                <img src="img/slider-car.png" alt="">
+                                <img src="img/car.png" alt="" class="slider-mobile__scroll-card-image">
                                 <p class="slider-mobile__scroll-card-caption">Доставка</p>
                             </div>
                         </a>
 
                         <a href="#" class="slider-mobile__scroll-link btn-link">
-                            <div class="slider-mobile__scroll-card ">
-                                <img src="img/slider-loader.png " alt=" ">
+                            <div class="slider-mobile__scroll-card">
+                                <img src="img/slider-loader.png" alt="" class="slider-mobile__scroll-card-image">
                                 <p class="slider-mobile__scroll-card-caption ">Разгрузка и подем</p>
                             </div>
                         </a>
 
                         <a href="# " class="slider-mobile__scroll-link btn-link">
                             <div class="slider-mobile__scroll-card">
-                                <img src="img/slider-decstop.png" alt="">
+                                <img src="img/car.png" alt="" class="slider-mobile__scroll-card-image">
                                 <p class="slider-mobile__scroll-card-caption">Оплата</p>
                             </div>
                         </a>
